--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+*.obj
+
 # =========================
 # Operating System Files
 # =========================
@@ -45,4 +47,3 @@ Temporary Items
 logs/
 Saves/
 Release/
-.obj
