--- a/Source/Release/config.ini
+++ b/Source/Release/config.ini
@@ -1,18 +1,18 @@
 [Settings]
-redirect_ip=192.168.0.9
+redirect_ip=84.118.94.106
 use_encryption=false
 log_file=true
 [MYSQL]
 host=localhost
 database=luni
 username=root
-password= 
+password=mysql
 [Auth]
-redirect_port=3002
+redirect_port=2002
 listen_port=1001
 [Char]
-redirect_port=3003
-listen_port=3002
+redirect_port=2003
+listen_port=2002
 [World]
-redirect_port=3004
-listen_port=3003
+redirect_port=2004
+listen_port=2003
