Improvements on World Loop, started Chat Commands rework

--- a/Source/LUNI Server.vcxproj
+++ b/Source/LUNI Server.vcxproj
@@ -77,6 +77,7 @@
     <ClInclude Include="Character.h" />
     <ClInclude Include="Characters.h" />
     <ClInclude Include="CharactersDB.h" />
+    <ClInclude Include="ChatCommands.h" />
     <ClInclude Include="Color.h" />
     <ClInclude Include="Common.h" />
     <ClInclude Include="Database.h" />
@@ -118,6 +119,7 @@
     <ClCompile Include="Characters.cpp" />
     <ClCompile Include="CharactersDB.cpp" />
     <ClCompile Include="CharactersLoop.cpp" />
+    <ClCompile Include="ChatCommands.cpp" />
     <ClCompile Include="Common.cpp" />
     <ClCompile Include="Database.cpp" />
     <ClCompile Include="Encryption.cpp" />
